--- a/api/qsharp/microsoft.quantum.canon.iteratethroughcartesianproduct.yml
+++ b/api/qsharp/microsoft.quantum.canon.iteratethroughcartesianproduct.yml
@@ -2,14 +2,14 @@
 uid: microsoft.quantum.canon.iteratethroughcartesianproduct
 name: IterateThroughCartesianProduct
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   对若干范围内笛卡尔积中的每个索引应用操作。
 
 
-  以迭代方式为`0..(bounds[0] - 1)`、 `0..(bounds[1] - 1)`、... 的笛卡尔积的每个元素应用操作`0..(bounds[Length(bounds) - 1] - 1)`
+  以迭代方式为、、... 的笛卡尔积的每个元素应用操作 `0..(bounds[0] - 1)` `0..(bounds[1] - 1)``0..(bounds[Length(bounds) - 1] - 1)`
 examples: >-
-  给定一个操作`op`，以下两个代码段是等效的：
+  给定一个操作 `op` ，以下两个代码段是等效的：
 
 
   ```Q#
@@ -69,9 +69,9 @@ output:
 seeAlso:
 - microsoft.quantum.canon.iteratethroughcartesianpower
 metadata:
-  ms.openlocfilehash: 0021d7715963d0b0d2f3a0248b857b7591876220
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 07b22e7b094198a42c6126579ebf285b7d93af52
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82679044"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356178"
