--- a/api/qsharp/microsoft.quantum.canon.modularincrementle.yml
+++ b/api/qsharp/microsoft.quantum.canon.modularincrementle.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.modularincrementle
 name: ModularIncrementLE
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: ModularIncrementLE 已被弃用。 请改用 @"microsoft.quantum.arithmetic.modularincrementbyinteger"。
 syntax: 'operation ModularIncrementLE (increment : Int, modulus : Int, target : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
 input:
@@ -25,9 +25,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 1fa8bf5f3f7f2f3fd69d13e1f94dea728e8036cf
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: c32b421cd9398d022b61d105685a10648ba5ddd5
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82678928"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356076"
