--- a/api/qsharp/microsoft.quantum.canon.operationpowc.yml
+++ b/api/qsharp/microsoft.quantum.canon.operationpowc.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.operationpowc
 name: OperationPowC
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   引发幂运算。
 
-  修饰符`C`指示操作可控制。
+  修饰符 `C` 指示操作可控制。
 
 
   也就是说，在给定一个表示入口 $U $ 的操作的情况下，将为 power $m $ $U ^ m $ 返回一个新操作。
@@ -52,9 +52,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.operationpow
 metadata:
-  ms.openlocfilehash: b3714baaa9eb0f0769b5e141e9ba3f0dce7c70cf
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 7e787866975b179d08ca713e229c48634212cca0
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82678673"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89355838"
