--- a/api/qsharp/microsoft.quantum.canon.operationpowca.yml
+++ b/api/qsharp/microsoft.quantum.canon.operationpowca.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.operationpowca
 name: OperationPowCA
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   引发幂运算。
 
-  修饰符`A`指示该操作是可控制的且 adjointable。
+  修饰符 `A` 指示该操作是可控制的且 adjointable。
 
 
   也就是说，在给定一个表示入口 $U $ 的操作的情况下，将为 power $m $ $U ^ m $ 返回一个新操作。
@@ -54,9 +54,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.operationpow
 metadata:
-  ms.openlocfilehash: 896d142da1075eb282ef7889c26b9874ca478d16
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: bec7e61813934efcb50e2a4c0e1c8a776c281571
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82678662"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89355821"
