--- a/api/qsharp/microsoft.quantum.canon.modularaddproductle.yml
+++ b/api/qsharp/microsoft.quantum.canon.modularaddproductle.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.modularaddproductle
 name: ModularAddProductLE
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: ModularAddProductLE 已被弃用。 请改用 @"microsoft.quantum.arithmetic.multiplyandaddbymodularinteger"。
 syntax: 'operation ModularAddProductLE (constMultiplier : Int, modulus : Int, multiplier : Microsoft.Quantum.Arithmetic.LittleEndian, summand : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
 input:
@@ -27,9 +27,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: c46815d604095cb08438b4abbc5be6438c23b234
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e702dfcd9300f7fcb968417d2516157390d99a8a
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82678954"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356132"
