--- a/api/qsharp/microsoft.quantum.canon.modularaddproductphasele.yml
+++ b/api/qsharp/microsoft.quantum.canon.modularaddproductphasele.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.modularaddproductphasele
 name: ModularAddProductPhaseLE
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: ModularAddProductPhaseLE 已被弃用。 请改用 @"microsoft.quantum.arithmetic.multiplyandaddphasebymodularinteger"。
 syntax: 'operation ModularAddProductPhaseLE (constMultiplier : Int, modulus : Int, multiplier : Microsoft.Quantum.Arithmetic.LittleEndian, phaseSummand : Microsoft.Quantum.Arithmetic.PhaseLittleEndian) : Unit'
 input:
@@ -27,9 +27,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 1894c38e0f0da459c66ba6769f72dcaeaebea172
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e7770013794e644629870a6ae07089a9a899607d
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82678945"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356110"
