--- a/api/qsharp/microsoft.quantum.canon.multiplexoperationsbruteforcefromgenerator.yml
+++ b/api/qsharp/microsoft.quantum.canon.multiplexoperationsbruteforcefromgenerator.yml
@@ -2,19 +2,19 @@
 uid: microsoft.quantum.canon.multiplexoperationsbruteforcefromgenerator
 name: MultiplexOperationsBruteForceFromGenerator
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   应用 $U $ 的乘法控制的单一操作，该操作将应用单一 $V _j $，由 n qubit number state $ \ket{j} $ 控制。
 
 
   $U = \sum ^ {N-1} _ {j = 0} \ket{j}\bra{j}\otimes V_j $。
-remarks: '`coefficients`如果指定少于 $ 2 ^ n $，则将用标识元素填充。 此版本通过通过 n 个控制的单一运算符循环直接实现。'
+remarks: '`coefficients` 如果指定少于 $ 2 ^ n $，则将用标识元素填充。 此版本通过通过 n 个控制的单一运算符循环直接实现。'
 syntax: "operation MultiplexOperationsBruteForceFromGenerator (unitaryGenerator : (Int, (Int -> ('T => Unit is Adj + Ctl))), index : Microsoft.Quantum.Arithmetic.LittleEndian, target : 'T) : Unit"
 input:
   content: "(unitaryGenerator : (Int, (Int -> ('T => Unit is Adj + Ctl))), index : Microsoft.Quantum.Arithmetic.LittleEndian, target : 'T)"
   types:
   - name: unitaryGenerator
-    summary: 一个元组，其中第`Int`一个元素是 unitaries $N $ 的数量，第二个`(Int -> ('T => () is Adj + Ctl))`元素是在 $ [0，N-1] $ 中采用整数 $j $ 并输出单一运算 $V _j $ 的函数。
+    summary: 一个元组，其中第一个元素 `Int` 是 unitaries $N $ 的数量，第二个元素 `(Int -> ('T => () is Adj + Ctl))` 是在 $ [0，N-1] $ 中采用整数 $j $ 并输出单一运算 $V _j $ 的函数。
     types:
     - isPrimitive: true
       uid: Int
@@ -53,9 +53,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: ea435831323b0e117027005fa8007c87ab3f2575
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 62fdb247904ab5d79a2d24dcdca1f4d65cd45a06
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82678803"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89355874"
