--- a/api/qsharp/microsoft.quantum.canon.operationpowa.yml
+++ b/api/qsharp/microsoft.quantum.canon.operationpowa.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.operationpowa
 name: OperationPowA
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   引发幂运算。
 
-  修饰符`A`指示操作为 adjointable。
+  修饰符 `A` 指示操作为 adjointable。
 
 
   也就是说，在给定一个表示入口 $U $ 的操作的情况下，将为 power $m $ $U ^ m $ 返回一个新操作。
@@ -52,9 +52,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.operationpow
 metadata:
-  ms.openlocfilehash: 4cae162ca7528f8cf59a5cbd6e9102a222f2a6f8
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e518adab118600e52ab99102bab6e2de11d54f31
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82678680"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89355855"
