--- a/api/qsharp/microsoft.quantum.canon.qft.yml
+++ b/api/qsharp/microsoft.quantum.canon.qft.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.qft
 name: QFT
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: 对包含大字节序表示形式整数的量程寄存器执行量程傅立叶转换。
 remarks: 输入和输出假定为大字节序编码。
 syntax: 'operation QFT (qs : Microsoft.Quantum.Arithmetic.BigEndian) : Unit'
@@ -23,9 +23,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applyquantumfouriertransformbe
 metadata:
-  ms.openlocfilehash: 373adfd726324656934a4a98a9c9e53ddb5940e3
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 54666f0e2bb2e00ddc4bd2e4825bd1cb76865420
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82678543"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89355787"
