--- a/api/qsharp/microsoft.quantum.chemistry.htermstogenidx.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.htermstogenidx.yml
@@ -2,14 +2,14 @@
 uid: microsoft.quantum.chemistry.htermstogenidx
 name: HTermsToGenIdx
 type: function
-namespace: Microsoft.Quantum.Chemistry
-summary: 将`HTerm[]`数据格式的 Hamiltonian 术语的索引转换为 GeneratorIndex。
+namespace: microsoft.quantum.chemistry
+summary: 将数据格式的 Hamiltonian 术语的索引转换 `HTerm[]` 为 GeneratorIndex。
 syntax: 'function HTermsToGenIdx (data : Microsoft.Quantum.Chemistry.HTerm[], termType : Int[], idx : Int) : Microsoft.Quantum.Simulation.GeneratorIndex'
 input:
   content: '(data : Microsoft.Quantum.Chemistry.HTerm[], termType : Int[], idx : Int)'
   types:
   - name: data
-    summary: 输入格式的`HTerm[]`数据。
+    summary: 输入格式的数据 `HTerm[]` 。
     isArray: true
     uid: microsoft.quantum.chemistry.hterm
   - name: termType
@@ -24,12 +24,12 @@ input:
 output:
   content: Microsoft.Quantum.Simulation.GeneratorIndex
   types:
-  - summary: 表示由表示的`data[idx]`Hamiltonian 术语的 GeneratorIndex，以及添加的`termType`附加信息。
+  - summary: 表示由表示的 Hamiltonian 术语的 GeneratorIndex `data[idx]` ，以及添加的附加信息 `termType` 。
     uid: microsoft.quantum.simulation.generatorindex
 metadata:
-  ms.openlocfilehash: 6c7c235cc1d3ccb5ea0b739c22a5d2c5c33129ce
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 451332a2ad0ade4871920a7da34d8af0afd990c9
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677570"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89354206"
