--- a/api/qsharp/microsoft.quantum.chemistry.htermtogenidx.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.htermtogenidx.yml
@@ -2,14 +2,14 @@
 uid: microsoft.quantum.chemistry.htermtogenidx
 name: HTermToGenIdx
 type: function
-namespace: Microsoft.Quantum.Chemistry
-summary: 将`HTerm`数据格式的 Hamiltonian 术语转换为 GeneratorIndex。
+namespace: microsoft.quantum.chemistry
+summary: 将数据格式的 Hamiltonian 术语转换 `HTerm` 为 GeneratorIndex。
 syntax: 'function HTermToGenIdx (term : Microsoft.Quantum.Chemistry.HTerm, termType : Int[]) : Microsoft.Quantum.Simulation.GeneratorIndex'
 input:
   content: '(term : Microsoft.Quantum.Chemistry.HTerm, termType : Int[])'
   types:
   - name: term
-    summary: 输入格式的`HTerm`数据。
+    summary: 输入格式的数据 `HTerm` 。
     uid: microsoft.quantum.chemistry.hterm
   - name: termType
     summary: 添加到 GeneratorIndex 的其他信息。
@@ -19,12 +19,12 @@ input:
 output:
   content: Microsoft.Quantum.Simulation.GeneratorIndex
   types:
-  - summary: 表示由表示的`term`Hamiltonian 术语的 GeneratorIndex，以及添加的`termType`附加信息。
+  - summary: 表示由表示的 Hamiltonian 术语的 GeneratorIndex `term` ，以及添加的附加信息 `termType` 。
     uid: microsoft.quantum.simulation.generatorindex
 metadata:
-  ms.openlocfilehash: cf8f527c6acf2762b5ce415b707358f1011997ef
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 670f5dbc8a836f644fbd4f9ada01fa99e78d35c5
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677507"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89354087"
