--- a/api/qsharp/microsoft.quantum.chemistry.isnotzero.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.isnotzero.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.chemistry.isnotzero
 name: IsNotZero
 type: function
-namespace: Microsoft.Quantum.Chemistry
-summary: 检查`Double`数字是否不约为零。
+namespace: microsoft.quantum.chemistry
+summary: 检查数字是否 `Double` 不约为零。
 syntax: 'function IsNotZero (number : Double) : Bool'
 input:
   content: '(number : Double)'
@@ -15,13 +15,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 如果`number`的绝对值大于`1e-15`，则返回 true。
+  - summary: 如果 `number` 的绝对值大于，则返回 true `1e-15` 。
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: e52a6215bcd8f7f0da5c6a09c60a74c027602361
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: c2239ded527f460b7c9f36bcb2bed3f5dffdec49
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677476"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89354053"
