--- a/api/qsharp/microsoft.quantum.chemistry.jordanwigner.jordanwignerclusteroperatorevolutionset.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.jordanwigner.jordanwignerclusteroperatorevolutionset.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.chemistry.jordanwigner.jordanwignerclusteroperatorevolutionset
 name: JordanWignerClusterOperatorEvolutionSet
 type: function
-namespace: Microsoft.Quantum.Chemistry.JordanWigner
+namespace: microsoft.quantum.chemistry.jordanwigner
 summary: 将 dynamical 生成器表示为一组 simulatable 入口和 JordanWigner 中的扩展。
 syntax: 'function JordanWignerClusterOperatorEvolutionSet () : Microsoft.Quantum.Simulation.EvolutionSet'
 input:
@@ -11,12 +11,12 @@ input:
 output:
   content: Microsoft.Quantum.Simulation.EvolutionSet
   types:
-  - summary: 一个`EvolutionSet` ，它将`GeneratorIndex` JordanWigner 基础的映射到 "EvolutionUnitary"。
+  - summary: 一个 `EvolutionSet` ，它将 `GeneratorIndex` JordanWigner 基础的映射到 "EvolutionUnitary"。
     uid: microsoft.quantum.simulation.evolutionset
 metadata:
-  ms.openlocfilehash: 4c2a23eb817a46b1b6c633d74f7e0428331fbdf3
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 65635fbf2dc0074d30a69bb2ee51793b325b2bcf
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82667816"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89353900"
