--- a/api/qsharp/microsoft.quantum.chemistry.jordanwigner.optimizedqubitizationoracle.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.jordanwigner.optimizedqubitizationoracle.yml
@@ -2,14 +2,14 @@
 uid: microsoft.quantum.chemistry.jordanwigner.optimizedqubitizationoracle
 name: OptimizedQubitizationOracle
 type: function
-namespace: Microsoft.Quantum.Chemistry.JordanWigner
+namespace: microsoft.quantum.chemistry.jordanwigner
 summary: 返回 T-sql 优化 Qubitization 操作和运行该操作所需的参数。
 syntax: 'function OptimizedQubitizationOracle (qSharpData : Microsoft.Quantum.Chemistry.JordanWigner.JordanWignerEncodingData, targetError : Double) : (Int, (Double, (Qubit[] => Unit is Adj + Ctl)))'
 input:
   content: '(qSharpData : Microsoft.Quantum.Chemistry.JordanWigner.JordanWignerEncodingData, targetError : Double)'
   types:
   - name: qSharpData
-    summary: 格式描述的`JordanWignerEncodingData` Hamiltonian。
+    summary: 格式描述的 Hamiltonian `JordanWignerEncodingData` 。
     uid: microsoft.quantum.chemistry.jordanwigner.jordanwignerencodingdata
   - name: targetError
     summary: 辅助状态准备步骤出错。
@@ -18,7 +18,7 @@ input:
 output:
   content: (Int, (Double, (Qubit[] => Unit is Adj + Ctl)))
   types:
-  - summary: 元组，其中`Int` ：是已分配的 qubits 数`Double` ，是 Hamiltonian 系数的一种标准，操作是 Qubitization 创建的量程审核。
+  - summary: 元组，其中： `Int` 是已分配的 qubits 数， `Double` 是 Hamiltonian 系数的一种标准，操作是 Qubitization 创建的量程审核。
     types:
     - isPrimitive: true
       uid: Int
@@ -39,9 +39,9 @@ output:
         - Adjoint
         - Controlled
 metadata:
-  ms.openlocfilehash: b6dff5ce49e6f0d106df31040c2e539fc1a24029
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 381d6b251cf4fe2e44b5533f0de74ec0f1791572
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82665104"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89339365"
