--- a/api/qsharp/microsoft.quantum.chemistry.jordanwigner.vqe.estimateenergy.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.jordanwigner.vqe.estimateenergy.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.chemistry.jordanwigner.vqe.estimateenergy
 name: EstimateEnergy
 type: operation
-namespace: Microsoft.Quantum.Chemistry.JordanWigner.VQE
+namespace: microsoft.quantum.chemistry.jordanwigner.vqe
 summary: >-
   通过对每个约旦 Wigner 条款提供的能源求和，来估算分子的能源。
 
@@ -26,9 +26,9 @@ output:
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 84908e99ce4b31aa588d6f58ab2d5aee259c6f14
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 597043686a41eb87974048e637385892d742fff1
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82663052"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89339076"
