--- a/api/qsharp/microsoft.quantum.chemistry.jordanwigner.vqe.expandedcoefficients.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.jordanwigner.vqe.expandedcoefficients.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.chemistry.jordanwigner.vqe.expandedcoefficients
 name: ExpandedCoefficients
 type: function
-namespace: Microsoft.Quantum.Chemistry.JordanWigner.VQE
+namespace: microsoft.quantum.chemistry.jordanwigner.vqe
 summary: 展开 Wigner 系数的精简表示形式，以便在这些条款和 Pauli 条款之间获取一对一的映射。
 syntax: 'function ExpandedCoefficients (coeff : Double[], termType : Int) : Double[]'
 input:
@@ -25,9 +25,9 @@ output:
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 56a2d86a59ec110eac20cdd7e6aa29a9e617ee46
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 3ebf6bb76efb562bf534b3831fe557f345b06166
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82662640"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89338991"
