--- a/api/qsharp/microsoft.quantum.convert.boolasstring.yml
+++ b/api/qsharp/microsoft.quantum.convert.boolasstring.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.convert.boolasstring
 name: BoolAsString
 type: function
-namespace: Microsoft.Quantum.Convert
+namespace: microsoft.quantum.convert
 summary: 将给定的布尔值转换为等效的字符串表示形式。
 remarks: '有关更多详细信息，请参阅[c # Convert。](https://docs.microsoft.com/dotnet/api/system.convert.tostring?view=netframework-4.7.1#System_Convert_ToString_System_Boolean_)'
 syntax: 'function BoolAsString (a : Bool) : String'
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: String
 metadata:
-  ms.openlocfilehash: d315f5a20820f722afdc5a01b6a4724d355d2b55
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 53417d9d3226725896698e8658f35248307de01f
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82660686"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89338733"
