--- a/api/qsharp/microsoft.quantum.convert.intasbigint.yml
+++ b/api/qsharp/microsoft.quantum.convert.intasbigint.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.convert.intasbigint
 name: IntAsBigInt
 type: function
-namespace: Microsoft.Quantum.Convert
+namespace: microsoft.quantum.convert
 summary: 将给定整数转换为等效的大整数。
-remarks: '有关更多详细信息，请参阅[c # BigInteger 构造函数](https://docs.microsoft.com/dotnet/api/system.numerics.biginteger.-ctor?view=netframework-4.7.2#System_Numerics_BigInteger__ctor_System_Int64_)。'
+remarks: '有关更多详细信息，请参阅 [c # BigInteger 构造函数](https://docs.microsoft.com/dotnet/api/system.numerics.biginteger.-ctor?view=netframework-4.7.2#System_Numerics_BigInteger__ctor_System_Int64_) 。'
 syntax: 'function IntAsBigInt (a : Int) : BigInt'
 input:
   content: '(a : Int)'
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: BigInt
 metadata:
-  ms.openlocfilehash: 51722709bce287d94042c05bcf8bc802ffbfefed
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 50ff94c0e1fdb900883a4cd8d69382900af74a22
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82659442"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89338566"
