--- a/api/qsharp/microsoft.quantum.convert.intasboolarray.yml
+++ b/api/qsharp/microsoft.quantum.convert.intasboolarray.yml
@@ -2,12 +2,12 @@
 uid: microsoft.quantum.convert.intasboolarray
 name: IntAsBoolArray
 type: function
-namespace: Microsoft.Quantum.Convert
+namespace: microsoft.quantum.convert
 summary: 使用返回的数组的小字节序表示形式，生成正整数的二进制表示形式。
 remarks: >-
-  输入`bits`必须介于0到63之间。
+  输入 `bits` 必须介于0到63之间。
 
-  输入`number`必须介于0到 $ 2 ^ {\texttt{bits}}-$1 之间。
+  输入 `number` 必须介于0到 $ 2 ^ {\texttt{bits}}-$1 之间。
 syntax: 'function IntAsBoolArray (number : Int, bits : Int) : Bool[]'
 input:
   content: '(number : Int, bits : Int)'
@@ -17,20 +17,20 @@ input:
     isPrimitive: true
     uid: Int
   - name: bits
-    summary: 的二进制表示形式的位数`number`。
+    summary: 的二进制表示形式的位数 `number` 。
     isPrimitive: true
     uid: Int
 output:
   content: Bool[]
   types:
-  - summary: 表示`number`的布尔值数组。
+  - summary: 表示的布尔值数组 `number` 。
     isArray: true
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: f14af582713f5d08e29b54a1e1758b4efbeea094
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 529ef27e63bd637c3994fd3c37d1d707a9bde5b8
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82659190"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89338549"
